[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Octopus/B__Octopus_idle_3.png" type="Texture" id=1]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Octopus/B__Octopus_idle_2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Octopus/B__Octopus_dead_1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Octopus/B__Octopus_attack_0.png" type="Texture" id=4]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Octopus/B__Octopus_attack_2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Octopus/B__Octopus_idle_0.png" type="Texture" id=6]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Octopus/B__Octopus_idle_1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Octopus/B__Octopus_attack_1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Octopus/B__Octopus_attack_3.png" type="Texture" id=9]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Octopus/B__Octopus_dead_3.png" type="Texture" id=10]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Octopus/B__Octopus_dead_0.png" type="Texture" id=11]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Octopus/B__Octopus_dead_2.png" type="Texture" id=12]
[ext_resource path="res://Scenes/Daemarrel/Kraken.gd" type="Script" id=13]
[ext_resource path="res://audio/mobhit.wav" type="AudioStream" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 3 ), ExtResource( 12 ), ExtResource( 10 ) ],
"loop": true,
"name": "dead",
"speed": 8.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 9 ) ],
"loop": true,
"name": "attack",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15.0677, 7.37359 )

[node name="Kraken" type="KinematicBody2D" groups=[
"Mob",
]]
script = ExtResource( 13 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
playing = true
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 12.3039, 9.82844 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 40.0
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
volume_db = -10.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 12.3039, 9.82844 )
shape = SubResource( 3 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
